--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
               "node_modules/primeflex/primeflex.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "baseHref": "/flyingcape-test/"
           },
           "configurations": {
             "production": {
