--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,6 @@ jobs:
         if: success()
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.TOKEN_GITHUB_ACTION }}
-          publish_dir: dist/angular-github-actions
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist/flyingcape-test
           enable_jekyll: true
