--- a/angular.json
+++ b/angular.json
@@ -34,8 +34,7 @@
               "node_modules/primeflex/primeflex.css",
               "src/styles.scss"
             ],
-            "scripts": [],
-            "baseHref": "/flyingcape-test/"
+            "scripts": []
           },
           "configurations": {
             "production": {
